<resources>
    <string name="app_name">Project Android C.E.S.A.R</string>

    <!-- Buttons -->
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="btnCancelRegister">Cancel</string>
    <string name="btnConfirmRegister">Confirm</string>
    <string name="btnCancelLogin">Cancel</string>
    <string name="btnConfirmLogin">Confirm</string>
    <string name="description_btn_recycleview">Delete</string>

    <!-- Image View -->
    <string name="picUser">Picture User</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- EditText -->
    <string name="hint_name">Nome</string>
    <string name="hint_cpf">CPF</string>
    <string name="hint_login">Login</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>

    <!-- Text -->
    <string name="txtLogin">Login</string>
    <string name="txtPassword">Password</string>


</resources>
