<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTxtLoginLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtLogin"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="@string/txtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtLoginLogin" />

    <Button
        android:id="@+id/btnCancelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnCancelLogin"
        app:layout_constraintStart_toStartOf="@+id/editTxtPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPasswordLogin"
        tools:text="Cancel" />

    <Button
        android:id="@+id/btnConfirmLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnConfirmLogin"
        app:layout_constraintStart_toEndOf="@+id/editTxtPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/editTxtPasswordLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>