<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgVMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/user"
        android:contentDescription="@string/picUser" />

    <Button
        android:id="@+id/btnMainRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnRegister"
        app:layout_constraintEnd_toEndOf="@+id/imgVMain"
        app:layout_constraintStart_toStartOf="@+id/imgVMain"
        app:layout_constraintTop_toBottomOf="@+id/btnMainLogin"
        tools:ignore="MissingConstraints"
        tools:text="@string/btnRegister" />

    <Button
        android:id="@+id/btnMainLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/imgVMain"
        app:layout_constraintStart_toStartOf="@+id/imgVMain"
        app:layout_constraintTop_toBottomOf="@+id/imgVMain"
        tools:ignore="MissingConstraints"
        tools:text="@string/btnLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>